@@ -1,3 +1,11 @@
+2000-05-04  Francois Dechelle  <dechelle@lipari.ircam.fr>
+
+	* packages/ispw/src/data/table.c: added save as .pat
+	
+	* packages/qlist/c/src/qlist.c: added save as .pat
+
+	* added overwrite confirmation dialog in patcher "Save as" in case file already exists.
+
 2000-05-03  Norbert Schnell  <schnell@ligeti.ircam.fr>
 
 	* sigthrow: fixed bug in catch~/throw~
